--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test": "jest  --notify",
     "build": "tsc",
     "prepare": "npm run build",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts --fix"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
